// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`breadcrumb should works 1`] = `
<nav class="c-breadcrumb">
  <div class="c-breadcrumb__item"><a href="#">首页</a></div><i class="c-breadcrumb__divider">/</i>
  <div class="c-breadcrumb__item"><a href="#">个人信息</a></div><i class="c-breadcrumb__divider">/</i>
  <div class="c-breadcrumb__item">修改密码</div>
</nav>
`;

exports[`breadcrumb works with custom divider 1`] = `
<nav class="c-breadcrumb">
  <div class="c-breadcrumb__item"><a href="#">首页</a></div><i class="c-breadcrumb__divider">▹</i>
  <div class="c-breadcrumb__item"><a href="#">个人信息</a></div><i class="c-breadcrumb__divider">▹</i>
  <div class="c-breadcrumb__item">修改密码</div>
</nav>
`;

exports[`breadcrumb works with scoped slot as custom divider 1`] = `
<nav class="c-breadcrumb">
  <div class="c-breadcrumb__item"><a href="#">首页</a></div><i class="c-breadcrumb__divider"><span class="divider">$</span></i>
  <div class="c-breadcrumb__item"><a href="#">个人信息</a></div><i class="c-breadcrumb__divider"><span class="divider">$</span></i>
  <div class="c-breadcrumb__item">修改密码</div>
</nav>
`;

exports[`breadcrumb-item should works 1`] = `
<div class="c-breadcrumb__item">
  <div>Content</div>
</div>
`;
